force-app/main/default/objects/Prescription_Order__c/Prescription_Order__c.object-meta.xml
<CustomObject>
    <label>Prescription Order</label>
    <nameField>
        <displayFormat>Prescription Order-{0000}</displayFormat>
        <label>Prescription Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescription Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>