force-app/main/default/objects/Prescription_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prescription Order</relationshipLabel>
    <relationshipName>Prescription_Order</relationshipName>
    <type>Lookup</type>
</CustomField>