force-app/main/default/objects/Prescription_Order__c/fields/After_Discharge__c.field-meta.xml
<CustomField>
    <fullName>After_Discharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Discharge</label>
    <type>Checkbox</type>
</CustomField>