force-app/main/default/objects/Prescription_Order__c/fields/Archive_Status__c.field-meta.xml
<CustomField>
    <fullName>Archive_Status__c</fullName>
    <label>Archive_Status</label>
    <type>TextArea</type>
</CustomField>