force-app/main/default/objects/Prescription_Order__c/fields/Archive_Status_NC__c.field-meta.xml
<CustomField>
    <fullName>Archive_Status_NC__c</fullName>
    <label>Archive_Status_NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>