force-app/main/default/objects/Prescription_Order__c/fields/Before_Meal_or_After_Meal__c.field-meta.xml
<CustomField>
    <fullName>Before_Meal_or_After_Meal__c</fullName>
    <label>Before Meal or After Meal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Meal (AC)</fullName>
            </value>
            <value>
                <fullName>After Meal (PC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>