force-app/main/default/objects/Prescription_Order__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>It is used to store the code the prescription record.</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>