force-app/main/default/objects/Prescription_Order__c/fields/Coding_System_Value__c.field-meta.xml
<CustomField>
    <fullName>Coding_System_Value__c</fullName>
    <description>It is used to store the code.</description>
    <label>Coding System Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>