force-app/main/default/objects/Prescription_Order__c/fields/Comment_1__c.field-meta.xml
<CustomField>
    <fullName>Comment_1__c</fullName>
    <label>Comment 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>