force-app/main/default/objects/Prescription_Order__c/fields/Comment_2__c.field-meta.xml
<CustomField>
    <fullName>Comment_2__c</fullName>
    <label>Comment 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>