force-app/main/default/objects/Prescription_Order__c/fields/Comment_3__c.field-meta.xml
<CustomField>
    <fullName>Comment_3__c</fullName>
    <label>Comment 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>