force-app/main/default/objects/Prescription_Order__c/fields/Date_Of_Approval_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Approval_1__c</fullName>
    <label>Date Of Approval 1</label>
    <type>DateTime</type>
</CustomField>