force-app/main/default/objects/Prescription_Order__c/fields/Date_Of_Approval_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Approval_3__c</fullName>
    <label>Date Of  Approval 3</label>
    <type>DateTime</type>
</CustomField>