force-app/main/default/objects/Prescription_Order__c/fields/Dispense_NC__c.field-meta.xml
<CustomField>
    <fullName>Dispense_NC__c</fullName>
    <label>Dispense_NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>