force-app/main/default/objects/Prescription_Order__c/fields/Dosage1__c.field-meta.xml
<CustomField>
    <fullName>Dosage1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to select the master data of type = Dosage</description>
    <label>Dosage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Dosage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Prescription Order (Dosage)</relationshipLabel>
    <relationshipName>Prescription_Order3</relationshipName>
    <type>Lookup</type>
</CustomField>