force-app/main/default/objects/Prescription_Order__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>