force-app/main/default/objects/Prescription_Order__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName>
    <label>Dosage Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>capsule</fullName>
            </value>
            <value>
                <fullName>Dosage Form</fullName>
            </value>
            <value>
                <fullName>film</fullName>
            </value>
            <value>
                <fullName>lab</fullName>
            </value>
            <value>
                <fullName>liguid</fullName>
            </value>
            <value>
                <fullName>liquid</fullName>
                <label>Liquid</label>
            </value>
            <value>
                <fullName>Packet</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>patch weekly</fullName>
            </value>
            <value>
                <fullName>solution</fullName>
            </value>
            <value>
                <fullName>Solution aunt-injector</fullName>
            </value>
            <value>
                <fullName>suspension</fullName>
            </value>
            <value>
                <fullName>suspension rec</fullName>
            </value>
            <value>
                <fullName>tablet</fullName>
            </value>
            <value>
                <fullName>tablet chewable</fullName>
            </value>
            <value>
                <fullName>tablet delayed release</fullName>
            </value>
            <value>
                <fullName>tablet dispersible</fullName>
            </value>
            <value>
                <fullName>tablet extended release 12h</fullName>
            </value>
            <value>
                <fullName>tablet sublingual</fullName>
            </value>
            <value>
                <fullName>tablet therapy</fullName>
            </value>
            <value>
                <fullName>Tablet Therapy Pack</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>