force-app/main/default/objects/Prescription_Order__c/fields/Dosage_NC__c.field-meta.xml
<CustomField>
    <fullName>Dosage_NC__c</fullName>
    <label>Dosage_NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>