force-app/main/default/objects/Prescription_Order__c/fields/Drug_Info__c.field-meta.xml
<CustomField>
    <fullName>Drug_Info__c</fullName>
    <label>Drug_Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>