force-app/main/default/objects/Prescription_Order__c/fields/Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name__c</fullName>
    <label>Drug Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>