force-app/main/default/objects/Prescription_Order__c/fields/Drug_Name_N__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name_N__c</fullName>
    <label>Drug_Name_N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>