force-app/main/default/objects/Prescription_Order__c/fields/Drug_Name_NC__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name_NC__c</fullName>
    <label>Drug_Name_NC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>