force-app/main/default/objects/Prescription_Order__c/fields/DrugId__c.field-meta.xml
<CustomField>
    <fullName>DrugId__c</fullName>
    <label>DrugId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>