force-app/main/default/objects/Prescription_Order__c/fields/DrugInfo_NC__c.field-meta.xml
<CustomField>
    <fullName>DrugInfo_NC__c</fullName>
    <label>DrugInfo_NC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>