force-app/main/default/objects/Prescription_Order__c/fields/Ferquency__c.field-meta.xml
<CustomField>
    <fullName>Ferquency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Number Of Times</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>After every &apos;n’ hours</fullName>
            </value>
            <value>
                <fullName>After lunch</fullName>
            </value>
            <value>
                <fullName>After supper/Dinner</fullName>
            </value>
            <value>
                <fullName>Before Breakfast</fullName>
            </value>
            <value>
                <fullName>Custom pheno</fullName>
            </value>
            <value>
                <fullName>Once a day (AM)</fullName>
            </value>
            <value>
                <fullName>Once a day (HS)</fullName>
            </value>
            <value>
                <fullName>Once a day midday</fullName>
            </value>
            <value>
                <fullName>Once a day (Qam)</fullName>
            </value>
            <value>
                <fullName>Once a day (QHS)</fullName>
            </value>
            <value>
                <fullName>At a specific time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>