force-app/main/default/objects/Prescription_Order__c/fields/Form_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Unique_Id__c</fullName>
    <label>Form Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>