force-app/main/default/objects/Prescription_Order__c/fields/Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Form_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to connect multiple medications to a single form.
Used for form specific data ( medications )</description>
    <label>Form Value</label>
    <referenceTo>Form_Value__c</referenceTo>
    <relationshipLabel>Prescription Order</relationshipLabel>
    <relationshipName>Prescription_Order</relationshipName>
    <type>Lookup</type>
</CustomField>