force-app/main/default/objects/Prescription_Order__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to select the master data of type = Frequency</description>
    <label>Frequency Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Frequency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Prescription Order (Frequency)</relationshipLabel>
    <relationshipName>Prescription_Order2</relationshipName>
    <type>Lookup</type>
</CustomField>