force-app/main/default/objects/Prescription_Order__c/fields/IsEditButtonActive__c.field-meta.xml
<CustomField>
    <fullName>IsEditButtonActive__c</fullName>
    <formula>Archive_Status_NC__c  &lt;&gt;  &apos;N&apos;</formula>
    <label>IsEditButtonActive</label>
    <type>Checkbox</type>
</CustomField>