force-app/main/default/objects/Prescription_Order__c/fields/MAR_Display__c.field-meta.xml
<CustomField>
    <fullName>MAR_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MAR Display</label>
    <type>Checkbox</type>
</CustomField>