force-app/main/default/objects/Prescription_Order__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to select the master data of type = Medication</description>
    <label>Medication</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Medication</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Prescription Order (Medication)</relationshipLabel>
    <relationshipName>Prescription_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>