force-app/main/default/objects/Prescription_Order__c/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <label>Number of days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>