force-app/main/default/objects/Prescription_Order__c/fields/Number_of_Times_Days_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Days_Weeks__c</fullName>
    <label>Number of Times/Days/Weeks</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Repeat__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>