force-app/main/default/objects/Prescription_Order__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order By</label>
    <type>Checkbox</type>
</CustomField>