force-app/main/default/objects/Prescription_Order__c/fields/Patient_SIG__c.field-meta.xml
<CustomField>
    <fullName>Patient_SIG__c</fullName>
    <label>Patient_SIG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>