force-app/main/default/objects/Prescription_Order__c/fields/Patient_SIG_NC__c.field-meta.xml
<CustomField>
    <fullName>Patient_SIG_NC__c</fullName>
    <label>Patient_SIG_NC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>