force-app/main/default/objects/Prescription_Order__c/fields/Pharmacy_NC__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_NC__c</fullName>
    <label>Pharmacy_NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>