force-app/main/default/objects/Prescription_Order__c/fields/Prescription_Guid__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Guid__c</fullName>
    <label>Prescription_Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>