force-app/main/default/objects/Prescription_Order__c/fields/Prescription_Guid_NC__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Guid_NC__c</fullName>
    <label>Prescription_Guid_NC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>