force-app/main/default/objects/Prescription_Order__c/fields/Prescription_Order__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription Order</label>
    <referenceTo>Prescription_Order__c</referenceTo>
    <relationshipLabel>Prescription Order</relationshipLabel>
    <relationshipName>Prescription_Order</relationshipName>
    <type>Lookup</type>
</CustomField>