force-app/main/default/objects/Prescription_Order__c/fields/PRN__c.field-meta.xml
<CustomField>
    <fullName>PRN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRN</label>
    <type>Checkbox</type>
</CustomField>