force-app/main/default/objects/Prescription_Order__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>This field use for storing newcrop prescription quantity</description>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>