force-app/main/default/objects/Prescription_Order__c/fields/Reason_new__c.field-meta.xml
<CustomField>
    <fullName>Reason_new__c</fullName>
    <label>Reason new</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>