force-app/main/default/objects/Prescription_Order__c/fields/Refills__c.field-meta.xml
<CustomField>
    <fullName>Refills__c</fullName>
    <label>Refills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>