force-app/main/default/objects/Prescription_Order__c/fields/Refills_NC__c.field-meta.xml
<CustomField>
    <fullName>Refills_NC__c</fullName>
    <label>Refills_NC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>