force-app/main/default/objects/Prescription_Order__c/fields/Repeat__c.field-meta.xml
<CustomField>
    <fullName>Repeat__c</fullName>
    <label>Repeat</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Scheduled_Not_Scheduled__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>times in a day</fullName>
                <label>&apos;n&apos;  times in a day</label>
            </value>
            <value>
                <fullName>After every &apos;n&apos; hours</fullName>
            </value>
            <value>
                <fullName>After every &apos;n&apos; weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>