force-app/main/default/objects/Prescription_Order__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <length>20</length>
    <type>Text</type>
</CustomField>