force-app/main/default/objects/Prescription_Order__c/fields/Route_New_1__c.field-meta.xml
<CustomField>
    <fullName>Route_New_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to select different Route from the list of Routes in the master record.</description>
    <label>Route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Route</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Prescription Order</relationshipLabel>
    <relationshipName>Prescription_Order</relationshipName>
    <type>Lookup</type>
</CustomField>