force-app/main/default/objects/Prescription_Order__c/fields/Route_New__c.field-meta.xml
<CustomField>
    <fullName>Route_New__c</fullName>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buccal</fullName>
            </value>
            <value>
                <fullName>im</fullName>
            </value>
            <value>
                <fullName>IM,Lab</fullName>
            </value>
            <value>
                <fullName>injection</fullName>
            </value>
            <value>
                <fullName>Instramuscular</fullName>
            </value>
            <value>
                <fullName>Intramuscular</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>nasal</fullName>
            </value>
            <value>
                <fullName>oral</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
            <value>
                <fullName>sublingual</fullName>
            </value>
            <value>
                <fullName>transdermal</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>