force-app/main/default/objects/Prescription_Order__c/fields/Scheduled_Not_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Not_Scheduled__c</fullName>
    <label>Scheduled / Not Scheduled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>