force-app/main/default/objects/Prescription_Order__c/fields/Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Signature_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Status</label>
    <type>Checkbox</type>
</CustomField>