force-app/main/default/objects/Prescription_Order__c/fields/Status_c__c.field-meta.xml
<CustomField>
    <fullName>Status_c__c</fullName>
    <label>Status_c</label>
    <type>TextArea</type>
</CustomField>