force-app/main/default/objects/Prescription_Order__c/fields/Status_NC__c.field-meta.xml
<CustomField>
    <fullName>Status_NC__c</fullName>
    <label>Status_NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>