force-app/main/default/objects/Prescription_Order__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>SubStatus</label>
    <type>TextArea</type>
</CustomField>