force-app/main/default/objects/Prescription_Order__c/fields/SubStatus_NC__c.field-meta.xml
<CustomField>
    <fullName>SubStatus_NC__c</fullName>
    <label>SubStatus_NC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>