force-app/main/default/objects/Prescription_Order__c/fields/Taper__c.field-meta.xml
<CustomField>
    <fullName>Taper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taper</label>
    <type>Checkbox</type>
</CustomField>