force-app/main/default/objects/Prescription_Order__c/fields/Template_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Template_Medicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to connect patient medicine with template medicine.</description>
    <label>Template Medicine</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Prescription_Order__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Template Medicine</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prescription_Order__c</referenceTo>
    <relationshipLabel>Prescription Order (Template Medicine)</relationshipLabel>
    <relationshipName>Prescription_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>