force-app/main/default/objects/Prescription_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRN</fullName>
            </value>
            <value>
                <fullName>Taper</fullName>
            </value>
            <value>
                <fullName>Action Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>