force-app/main/default/objects/Prescription_Order__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>