force-app/main/default/objects/Prescription_Order__c/fields/Warning_new__c.field-meta.xml
<CustomField>
    <fullName>Warning_new__c</fullName>
    <label>Warning new</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>