force-app/main/default/objects/Prescription_Order__c/recordTypes/e_prescription.recordType-meta.xml
<RecordType>
    <fullName>e_prescription</fullName>
    <active>true</active>
    <label>e-prescription</label>
</RecordType>