force-app/main/default/objects/Prescription_Order__c/recordTypes/Template_Medication.recordType-meta.xml
<RecordType>
    <fullName>Template_Medication</fullName>
    <active>true</active>
    <label>Template Medication</label>
</RecordType>