force-app/main/default/objects/Prescription_Order__c/listViews/Active_Medications.listView-meta.xml
<ListView>
    <fullName>Active_Medications</fullName>
    <columns>NAME</columns>
    <columns>Drug_Name__c</columns>
    <columns>Patient_SIG__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Active Medications</label>
</ListView>