force-app/main/default/objects/Prescription_Order__c/listViews/Inactive_Medications.listView-meta.xml
<ListView>
    <fullName>Inactive_Medications</fullName>
    <columns>NAME</columns>
    <columns>Drug_Name__c</columns>
    <columns>Patient_SIG__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Inactive Medications</label>
</ListView>